Added a ListView to show the results - not working!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="NotImplementedException">Not Implemented Exception</string>
     <string name="SearchYoutubeFailed">Search youtube failed!</string>
+    <string name="DownloadStarted">Download started. You will be notified when over.</string>
+    <string name="DownloadOver">Download over. You may set it as a ringtone.</string>
 </resources>
