--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="SearchYoutubeFailed">Search youtube failed!</string>
     <string name="DownloadStarted">Download started. You will be notified when over.</string>
     <string name="DownloadOver">Download over. You may set it as a ringtone.</string>
+    <string name="DownloadFailed">Download failed!</string>
 </resources>
