--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="DownloadStarted">Download started. You will be notified when over.</string>
     <string name="DownloadOver">Download over. You may set it as a ringtone.</string>
     <string name="DownloadFailed">Download failed!</string>
+    <string name="SetDefaultRingtoneDialog">Would you like to set as default ringtone?</string>
 </resources>
