--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cliptone</string>
-    <string name="search_for_a_video_on_youtube">Search for a video on youtube</string>
+    <string name="search_for_a_video_on_youtube">Search a song / artist</string>
     <string name="action_settings">Settings</string>
     <string name="NotImplementedException">Not Implemented Exception</string>
     <string name="SearchYoutubeFailed">Search youtube failed!</string>
