Added check for null or empty edittext, if yes then do not run search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="DownloadFailed">Download failed!</string>
     <string name="SetDefaultRingtoneDialog">Would you like to set as default ringtone?</string>
     <string name="NoInternetConnection">No internet connection found</string>
+    <string name="OK">OK</string>
 </resources>
